# sphero_mini_ros

./: .gitmodules  CMakeLists.txt  Dockerfile  README.md  package.xml  setup.sh  start.sh
launch/: sphero_mini.launch
scripts/: sphero_mini.py
