<?xml version="1.0"?>
<package format="2">
  <name>sphero_mini_ros</name>
  <version>0.0.1</version>
  <description>The sphero mini ros driver Package</description>

  <maintainer email="yuokamoto1988@gmail.com">Yu Okamoto</maintainer>
  <author email="yuokamoto1988@gmail.com">Yu Okamoto</author>

  <license>Commercial</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>

</package>